--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en-US">
 <head>
 	<title>Angular</title>
-  <script src="lib/chance.js"></script>
-	<script src="lib/angular.min.js"></script>
-  <script src="https://code.angularjs.org/1.2.25/angular-sanitize.js"></script>
+  <script src="node_modules/chance/chance.js"></script>
+	<script src="node_modules/angular/angular.min.js"></script>
+  <script src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
