--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" ng-app="myShopingList">
 <head>
 	<title>Angular</title>
-    <script src="http://chancejs.com/chance.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/chance/1.0.8/chance.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-sanitize.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
