--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 <body>
 
-<div class="wrapper" ng-app="myShopingList" ng-controller="pageCtrl as page" ng-class="{'app-loaded': true}">
-
+<div class="wrapper" ng-app="myShoppingList" ng-controller="pageCtrl as page" ng-class="{'app-loaded': true}">
     <div class="clearfix" ng-controller="productsCtrl">
 
         <basket></basket>
@@ -43,6 +42,7 @@
 </div>
 
 <script src="js/myApp.js"></script>
+<script src="js/app.buy.service.js"></script>
 <script src="js/app.page.controller.js"></script>
 <script src="js/app.products.controller.js"></script>
 <script src="js/basket/basket.module.js"></script>
