--- a/js/product-item/product-item.template.html
+++ b/js/product-item/product-item.template.html
@@ -8,7 +8,7 @@
         <div class="some-info"><p>{{x.description}}</p></div>
         <div class="buy clearfix">
             <div class="product-price">&#36;{{x.price}}</div>
-            <button class="btn btn-default" ng-disabled="x.isAvailable">Buy</button>
+            <a href class="btn btn-default" ng-disabled="x.isAvailable" ng-click="buy(x, $event)">Buy</a>
         </div>
 
         <div ng-controller="PanelController as panel">
